--- a/Example/OCSPCache.xcodeproj/xcshareddata/xcschemes/OCSPCache-Example.xcscheme
+++ b/Example/OCSPCache.xcodeproj/xcshareddata/xcschemes/OCSPCache-Example.xcscheme
@@ -48,6 +48,11 @@
                BlueprintName = "OCSPCache_Tests"
                ReferencedContainer = "container:OCSPCache.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "CertTests/testDemoCAWithGoodCertificateRevoked">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
